# ailia-models-tflite

./: .gitignore  NXP.md  README.md  launcher.py  requirements.txt  setup.cfg
audio_processing/whisper/: export.py  whisper.py
background_removal/u2net/: README.md  u2net.py  u2net_utils.py
depth_estimation/midas/: README.md  midas.py
face_detection/blazeface/: README.md  blazeface.py  blazeface_utils.py
face_recognition/age-gender-recognition-retail/: age-gender-recognition-retail.py
face_recognition/face_classification/: README.md  blazeface_utils.py  face_classification.py
face_recognition/facemesh/: LICENSE  README.md  facemesh.py  facemesh_utils.py
face_restoration/gfpgan/: README.md  gfpgan.py
hand_recognition/blazehand/: LICENSE  README.md  blazehand.py  blazehand_utils.py
image_classification/efficientnet_lite/: README.md  efficientnet_lite.py
image_classification/googlenet/: README.md  googlenet.py
image_classification/mobilenetv1/: README.md  mobilenetv1.py
image_classification/mobilenetv2/: README.md  mobilenetv2.py  mobilenetv2_labels.py
image_classification/resnet50/: README.md  resnet50.py  verification.py
image_classification/squeezenet/: LICENSE  README.md  squeezenet.py
image_classification/vgg16/: README.md  vgg16.py  vgg16_verify_tensors.py
image_classification/vision_transformer/: README.md  vision_transformer.py  (+1 more)
scripts/: download_all_models.bat  download_all_models.sh
util/: classifier_utils.py  detector_utils.py  image_utils.py  log_init.py  model_utils.py  nms_utils.py  utils.py  webcamera_utils.py
(+43 files in other folders)
