[metadata]
name = ailia-models-tflite
version = 0.0.1
description = --
url = git@github.com:axinc-ai/ailia-models-tflite.git
description_file = README.md
author = --
maintainer = --
maintainer_email = --
platforms = --


[flake8]
max-line-length = 130
exclude = .tox,*.egg,build,temp,*.tflite
select = E,W,F
ignore = E402, E266
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/